tests/baselines/reference/infiniteConstraints.errors.txt
tests/cases/compiler/infiniteConstraints.ts(4,37): error TS2536: Type '"val"' cannot be used to index type 'B[Exclude<keyof B, K>]'.
tests/cases/compiler/infiniteConstraints.ts(31,42): error TS2345: Argument of type '{ main: Record<"val", "dup">; alternate: Record<"val", "dup">; }' is not assignable to parameter of type '{ main: never; alternate: never; }'.
  Types of property 'main' are incompatible.
    Type 'Record<"val", "dup">' is not assignable to type 'never'.


==== tests/cases/compiler/infiniteConstraints.ts (2 errors) ====
    // Both of the following types trigger the recursion limiter in getImmediateBaseConstraint
    
    type T1<B extends { [K in keyof B]: Extract<B[Exclude<keyof B, K>], { val: string }>["val"] }> = B;
    type T2<B extends { [K in keyof B]: B[Exclude<keyof B, K>]["val"] }> = B;
                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2536: Type '"val"' cannot be used to index type 'B[Exclude<keyof B, K>]'.
    
    // Repros from #22950
    
    type AProp<T extends { a: string }> = T
    
    declare function myBug<
      T extends { [K in keyof T]: T[K] extends AProp<infer U> ? U : never }
    >(arg: T): T
    
    const out = myBug({obj1: {a: "test"}})
    
    type Value<V extends string = string> = Record<"val", V>;
    declare function value<V extends string>(val: V): Value<V>;
    
    declare function ensureNoDuplicates<
      T extends {
        [K in keyof T]: Extract<T[K], Value>["val"] extends Extract<T[Exclude<keyof T, K>], Value>["val"]
          ? never
          : any
      }
    >(vals: T): void;
    
    const noError = ensureNoDuplicates({main: value("test"), alternate: value("test2")});
    
    const shouldBeNoError = ensureNoDuplicates({main: value("test")});
    
    const shouldBeError = ensureNoDuplicates({main: value("dup"), alternate: value("dup")});
                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ main: Record<"val", "dup">; alternate: Record<"val", "dup">; }' is not assignable to parameter of type '{ main: never; alternate: never; }'.
!!! error TS2345:   Types of property 'main' are incompatible.
!!! error TS2345:     Type 'Record<"val", "dup">' is not assignable to type 'never'.
    